--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script id="table1" type="text/x-handlebars-template">
     <table>
         <tr>
-            <td>UserName</td>
+            <td>UserName1</td>
             <td>Name</td>
             <td>Email</td>
         </tr>
