--- a/panel.html
+++ b/panel.html
@@ -2,21 +2,25 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>FORM</title>
+    <title>panel</title>
     <link rel='stylesheet' href='css/site.css'/>
     <link rel='stylesheet' href='css/codemirror.css'/>
     <link rel='stylesheet' href='css/daterangepicker.css'/>
     <link rel='stylesheet' href='css/bootstrap.css'/>
     <link rel="stylesheet" href="css/umeditor.css">
     <link rel="stylesheet" href="css/select2.css">
-    <link rel="stylesheet" href="css/jquery.dataTables.css">
+
+    <link rel="stylesheet" href="css/dataTables.bootstrap.min.css">
+
     <script data-main="js/index" src="js/require.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="container" id="wrapper">
     <div class="row">
+        <div class="col-md-12 col-ms-12">
+            <h3>数据详情详情</h3>
 
-
+        </div>
     </div>
 </div>
 </body>
