--- a/index2.html
+++ b/index2.html
@@ -2,17 +2,23 @@
 <html>
 <head>
     <title>FORM</title>
-    <link rel='stylesheet' href='css/site.css'/>
-    <link rel='stylesheet' href='css/codemirror.css'/>
-    <link rel='stylesheet' href='css/daterangepicker.css'/>
-    <link rel='stylesheet' href='css/bootstrap.css'/>
-    <link rel='stylesheet' href='css/bootstrap.css'/>
-    <link href="css/umeditor.css" type="text/css" rel="stylesheet">
-    <script  src="js/jquery-1.12.3.js"></script>
-    <script data-main="js/main" src="js/umeditor/umeditor.config.js"></script>
-    <script data-main="js/main" src="js/umeditor/umeditor.min.js"></script>
-    <script data-main="js/main" src="js/index.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" href="css/daterangepicker.css" />
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/moment.js"></script>
+    <script type="text/javascript" src="js/daterangepicker.js"></script>
     <!--
+   <link rel='stylesheet' href='css/codemirror.css'/>
+    <link rel='stylesheet' href='css/bootstrap.css'/>
+    <link rel='stylesheet' href='css/daterangepicker.css'/>
+    <link href="css/umeditor.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+    <script src="js/moment.js"></script>
+    <script  src="js/daterangepicker.js"></script>
+    <script  src="js/t2.js"></script>
 
     <script data-main="js/main" src="js/codemirror.js"></script>
 
@@ -26,41 +32,13 @@
 <body>
 <div class="container">
     <div class="row">
-        <h2>Umeditor</h2>
-        <hr/>
-        <script type="text/plain" id="editor" style="width:1000px;height:240px;">
-            <p>输入提示</p>
-        </script>
 
         <h2>Daterangepicker</h2>
-        <hr/>
-        <div class="col-md-4 picker-group">
-            <input type="text" id="time" class="form-control">
-            <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
-        </div>
 
-        <br/>
-        <br/>
-        <h2>CodeMirror</h2>
-        <hr/>
-<textarea id="ta1">
--- SQL Mode for CodeMirror
-SELECT SQL_NO_CACHE DISTINCT
-		@var1 AS `val1`, @'val2', @global.'sql_mode',
-		1.1 AS `float_val`, .14 AS `another_float`, 0.09e3 AS `int_with_esp`,
-		0xFA5 AS `hex`, x'fa5' AS `hex2`, 0b101 AS `bin`, b'101' AS `bin2`,
-		DATE '1994-01-01' AS `sql_date`, { T "1994-01-01" } AS `odbc_date`,
-		'my string', _utf8'your string', N'her string',
-        TRUE, FALSE, UNKNOWN
-	FROM DUAL
-	-- space needed after '--'
-	# 1 line comment
-	/* multiline
-	comment! */
-	LIMIT 1 OFFSET 0;
+            <input type="text" id="demo">
 
-</textarea>
     </div>
 </div>
+
 </body>
 </html>
