--- a/table.html
+++ b/table.html
@@ -18,20 +18,31 @@
 <div class="container" id="wrapper">
     <div class="row">
         <div class="col-md-12 col-ms-12">
-                <h3>数据表</h3>
-                <div class="button-bar col-md-12" style=""><button id="btn-refresh" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-refresh"></span> 刷新</button>
-                    <button id="btn-add"  class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span> 添加</button>
-                    <button id="btn-edit"  class="btn btn-default btn-sm"  disabled="disabled"><span class="glyphicon glyphicon-edit"></span> 编辑</button>
-                    <button id="btn-delete"  class="btn btn-default btn-sm" disabled="disabled"><span class="glyphicon glyphicon-trash"></span> 删除</button>
+            <h3>数据表</h3>
+            <div class="table-container">
+                <div class="button-bar col-md-12" style="">
+                    <button id="btn-refresh" class="btn btn-default btn-sm"><span
+                            class="glyphicon glyphicon-refresh"></span> 刷新
+                    </button>
+                    <button id="btn-add" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span>
+                        添加
+                    </button>
+                    <button id="btn-edit" class="btn btn-default btn-sm" disabled="disabled"><span
+                            class="glyphicon glyphicon-edit"></span> 编辑
+                    </button>
+                    <button id="btn-delete" class="btn btn-default btn-sm" disabled="disabled"><span
+                            class="glyphicon glyphicon-trash"></span> 删除
+                    </button>
                 </div>
                 <div class="col-md-4 picker-group">
                     <input type="text" id="time" class="form-control">
                     <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
                 </div>
                 <div class=" col-md-12">
-                    <table id="mainTable" class="table table-striped table-bordered " >
+                    <table id="mainTable" class="table table-striped table-bordered ">
                     </table>
                 </div>
+            </div>
         </div>
     </div>
 </div>
